package com.simpulator.engine.graphics;

import com.badlogic.gdx.graphics.Camera;
import com.simpulator.engine.Entity;

/** Strategy based on Renderable for rendering entities */
public interface EntityRenderer {
    /** Returns whether the entity is currently in view of the given camera. */
    public boolean isVisible(Camera camera, Entity entity);

    /** Render the entity from the camera's perspective. */
    public void render(TextureBatch batch, Camera camera, Entity entity);
}
